--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,7 @@ URL: " mahmudeg.github.io "
 github:
   username: MahmudEG # change to your GitHub username
 
-# twitter:
-#  username: twitter_username # change to your Twitter username
+
 
 social:
   # Change to your full name.
@@ -98,7 +97,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: 
+avatar: ./assets/logo.png
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
 social_preview_image: # string, local or CORS resources
