--- a/_config.yml
+++ b/_config.yml
@@ -215,6 +215,7 @@ exclude:
   - purgecss.js
   - rollup.config.js
   - "package*.json"
+  - deploy.sh
 
 jekyll-archives:
   enabled: [categories, tags]
