--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,8 @@ URL: " mahmudeg.github.io "
 github:
   username: MahmudEG # change to your GitHub username
 
-
+# twitter:
+# username: twitter_username # change to your Twitter username
 
 social:
   # Change to your full name.
