--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ timezone: Africa/Tripoli
 
 title: Mahmud's Blog # the main title
 
-tagline: Cybersecurity, Networking, Telecomunication # it will display as the subtitle
+tagline: Cybersecurity, Cloud, Networking, Telecomunication # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-   blog about cybersecurity, networking, telecomunication and more
+   blog about cybersecurity, Cloud, networking, telecomunication and more
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
